<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calc"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/workingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="30dp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:text="433"
            tools:ignore="NestedWeights,RtlCompat,RtlSymmetry" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="30dp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="45sp"
            tools:text="433"
            tools:ignore="RtlCompat,RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_reset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:layout_marginLeft="2pt"
                android:background="@null"
                android:text="@string/key_reset"
                android:textColor="@color/red"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_brase"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_brase"
                android:textColor="@color/orange"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_percent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_percent"
                android:textColor="@color/orange"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_div"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_div"
                android:textColor="@color/orange"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:layout_marginLeft="2pt"
                android:background="@null"
                android:text="@string/key_7"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_8"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_9"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_mult"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_mult"
                android:textColor="@color/orange"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:layout_marginLeft="2pt"
                android:background="@null"
                android:text="@string/key_4"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_5"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_6"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_minus"
                android:textColor="@color/orange"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:layout_marginLeft="2pt"
                android:background="@null"
                android:text="@string/key_1"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_2"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_3"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_plus"
                android:textColor="@color/orange"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:layout_marginLeft="2pt"
                android:background="@null"
                android:text="@string/key_dot"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_0"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize"
                tools:ignore="ButtonStyle" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/key_result"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginRight="2pt"
                android:background="@null"
                android:text="@string/key_result"
                android:textColor="@color/orange"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>